# OS-2-Projet-F1

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  Drivers_Crash.csv  F1_Grand_Prix_2024.csv  GP.csv  README.md  VSCode.bat  csvParser.c  displayResult.c  genTime.c  grandPrix.c  grandPrix.h  note.txt  saveFile.c  strcuture.txt  testCsvParser.c  testFile.c  testMenu.c  util.c  util.h
include/: csvParser.h  grandPrix.h  saveFile.h  util.h
recomp/: CMakeCache.txt  Drivers.csv  Makefile  cmake_install.cmake  genTime  grandPrix  testCsvParser
